<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:padding="8dp"
    android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/ic_system_permission" />

    <com.google.android.material.textview.MaterialTextView
        style="?textAppearanceHeadline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/device_editor_permission_title" />

    <com.google.android.material.textview.MaterialTextView
        style="?textAppearanceBody1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/device_editor_permission_adb_title" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:contentPadding="8dp">

        <com.google.android.material.textview.MaterialTextView
            style="?textAppearanceBody2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_editor_permission_adb_command" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        style="?textAppearanceBody1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/device_editor_permission_settings_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/permission_button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:textColor="@color/color_white"
        android:text="@string/device_editor_permission_settings_button" />

</LinearLayout>